--- a/styles/app.css
+++ b/styles/app.css
@@ -2,6 +2,4 @@
 @tailwind components;
 @tailwind utilities;
 
-.content-wrapper{
-    transition: backgroud-color 10s;
-}
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,400;0,500;0,700;0,800;1,100;1,400&display=swap');
